--- a/All_weather_use.ini
+++ b/All_weather_use.ini
@@ -62,6 +62,10 @@ custom_proxy_group=🍎苹果服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美
 custom_proxy_group=📧邮件服务`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡`[]🎏其他
 custom_proxy_group=🔎搜索引擎`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
 custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告`[]DIRECT`[]👆🏻指定
+custom_proxy_group=💵支付金融`select`[]✈️起飞`[]🇺🇸美国`[]🇸🇬新加坡`[]🇭🇰香港`[]DIRECT
+custom_proxy_group=🔬学术资源`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇸🇬新加坡`[]🇯🇵日本
+custom_proxy_group=🧠思想工具`select`[]✈️起飞`[]🇺🇸美国`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本
+custom_proxy_group=📦下载服务`select`[]✈️起飞`[]🛩️墙内`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡`[]🇭🇰香港
 
 # 地区分组 - 自动测速
 custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,50
@@ -72,16 +76,16 @@ custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
-# 1. 本地网络和基础直连规则（优先级最高，规则集小）
+# 1. 本地网络和基础直连规则（优先级最高）
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
-# 2. 广告和隐私保护（高优先级，避免不必要的连接）
+# 2. 广告和隐私保护（高优先级）
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.yaml
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml
 
-# 4. 开发和AI服务（高频使用的工作工具）
+# 3. 开发和AI服务（高频使用的工作工具）
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Vercel/Vercel.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitLab/GitLab.yaml
@@ -89,24 +93,51 @@ ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/StackOverflow/StackOverflow.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Docker/Docker.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.yaml
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Atlassian/Atlassian.yaml
 
+# 4. AI服务
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.yaml
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.yaml
+ruleset=🤖AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Copilot.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Perplexity/Perplexity.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Midjourney/Midjourney.yaml
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HuggingFace/HuggingFace.yaml
 
-# 5. 即时通讯和游戏（低延迟需求）
+# 5. 学术资源和生产力工具
+ruleset=🔬学术资源,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Scholar/Scholar.yaml
+ruleset=🔬学术资源,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JSTOR/JSTOR.yaml
+ruleset=🔬学术资源,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleScholar/GoogleScholar.yaml
+
+ruleset=🧠思想工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Notion/Notion.yaml
+ruleset=🧠思想工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Obsidian/Obsidian.yaml
+ruleset=🧠思想工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Slack/Slack.yaml
+ruleset=🧠思想工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Trello/Trello.yaml
+
+# 6. 即时通讯和游戏
 ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
-ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/telegramcidr.txt
+
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Whatsapp/Whatsapp.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Signal/Signal.yaml
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Line/Line.yaml
 
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.yaml
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
 
-# 6. 重要的国内服务（高频使用的本地服务）
+# 7. 支付和金融服务
+ruleset=💵支付金融,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.yaml
+ruleset=💵支付金融,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Stripe/Stripe.yaml
+ruleset=💵支付金融,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Visa/Visa.yaml
+ruleset=💵支付金融,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/MasterCard/MasterCard.yaml
+
+# 8. 重要的国内服务
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.yaml
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.yaml
@@ -117,15 +148,15 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TencentVideo/TencentVideo.yaml
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Himalaya/Himalaya.yaml
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.yaml
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ZhihuAds/ZhihuAds.yaml
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Zhihu/Zhihu.yaml
 
-# 7. 主要国际平台服务（常用大型服务提供商）
+# 9. 主要国际平台服务
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.yaml
 ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml
 ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml
 
-# 8. 流媒体服务（视频流量大，但访问频率相对较低）
+# 10. 流媒体服务
 ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
 ruleset=📺B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
@@ -136,45 +167,29 @@ ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.yaml
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.yaml
 
-# 9. 社交媒体平台
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Slack/Slack.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Zoom/Zoom.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Notion/Notion.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Figma/Figma.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Canva/Canva.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tumblr/Tumblr.yaml
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/LinkedIn/LinkedIn.yaml
-
-# 10. 其他服务（使用频率相对较低）
+# 11. 其他服务
 ruleset=📧邮件服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.yaml
+ruleset=📧邮件服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Protonmail/Protonmail.yaml
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.yaml
 ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.yaml
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Dropbox/Dropbox.yaml
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.yaml
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.yaml
 
-# 11. 中国大陆网站和IP（规则集较大，放在后面）
-# 按从小到大的规则排序，提高匹配效率
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
+# 12. 下载和云存储服务
+ruleset=📦下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.yaml
+ruleset=📦下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.yaml
+ruleset=📦下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.yaml
+ruleset=📦下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Dropbox/Dropbox.yaml
+ruleset=📦下载服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/MEGA/MEGA.yaml
+
+# 13. 中国大陆网站和IP
+ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.yaml
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
-# 大型规则集放在中国规则的最后
-ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
-# 12. 国外网站集合规则（规则集大，放在最后）
-ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
+# 14. 国外网站集合规则
 ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.yaml
 
-# 13. 兜底规则（保持在最后）
+# 15. 兜底规则
 ruleset=🐟漏网之鱼,[]FINAL
 
 # ========== Clash核心配置 ==========
@@ -234,6 +249,17 @@ dns:
     - '*.tmall.com'
     - '*.tencent.com'
     - '*.weixin.qq.com'
+    - '*.paypal.com'
+    - '*.stripe.com'
+    - '*.scholar.google.com'
+    - '*.zoom.us'
+    - '*.notion.so'
+    - '*.obsidian.md'
+    - '*.slack.com'
+    - '*.openai.com'
+    - '*.claude.ai'
+    - '*.perplexity.ai'
+    - '*.huggingface.co'
   use-hosts: true
   nameserver-cache-size: 8192 # 增加缓存大小
   prefer-h3: true
@@ -241,22 +267,39 @@ dns:
   # DNS预热功能
   prefetch-domain: true
   prefetch-domains:
-    - 'google.com'
-    - 'youtube.com'
-    - 'github.com'
-    - 'openai.com'
-    - 'bing.com'
+    - 'alipay.com'
+    - 'apple.com'
+    - 'arxiv.org'
     - 'baidu.com'
     - 'bilibili.com'
-    - 'alipay.com'
-    - 'taobao.com'
+    - 'bing.com'
+    - 'claude.ai'
     - 'cloudflare.com'
+    - 'discord.com'
+    - 'github.com'
+    - 'gitlab.com'
+    - 'google.com'
+    - 'instagram.com'
     - 'microsoft.com'
-    - 'apple.com'
     - 'netflix.com'
+    - 'notion.so'
+    - 'obsidian.md'
+    - 'openai.com'
+    - 'paypal.com'
+    - 'perplexity.ai'
+    - 'protonmail.com'
+    - 'pubmed.ncbi.nlm.nih.gov'
+    - 'scholar.google.com'
+    - 'sci-hub.se'
+    - 'slack.com'
+    - 'spotify.com'
+    - 'stackoverflow.com'
+    - 'taobao.com'
+    - 'telegram.org'
     - 'twitter.com'
     - 'x.com'
-    - 'instagram.com'
+    - 'youtube.com'
+    - 'zoom.us'
 
   # 默认DNS服务器
   default-nameserver:
@@ -305,6 +348,13 @@ dns:
     'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
     'domain:spotify.com,domain:spotifycdn.com': [https://dns.google/dns-query]
     'domain:cloudflare.com,domain:cloudflare.net': [https://dns.google/dns-query]
+    'domain:discord.com': [https://dns.google/dns-query]
+    'domain:github.io': [https://dns.google/dns-query]
+    'domain:gitlab.io': [https://dns.google/dns-query]
+    'domain:scholar.google.com,domain:sci-hub.se,domain:arxiv.org': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:paypal.com,domain:stripe.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:notion.so,domain:obsidian.md,domain:slack.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:perplexity.ai,domain:huggingface.co': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
 
 # 常用域名预处理规则
 prepend-rules:
